manifests/kube-janitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: kube-janitor
    version: v20.10.0
  name: kube-janitor
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-janitor
  template:
    metadata:
      labels:
        application: kube-janitor
        version: v20.10.0
    spec:
      serviceAccountName: kube-janitor
      containers:
      - name: janitor
        # see https://codeberg.org/hjacobs/kube-janitor/releases
        image: hjacobs/kube-janitor:20.10.0
        args:
          - --interval=30
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 5m
            memory: 100Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
