manifests/webhooks-reg.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "pod-exec-guard"
webhooks:
- name: "pod-exec-guard.slok.dev"
  rules:
  - operations: ["CONNECT"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["pods/exec"]
  clientConfig:
    # NOTE: Change when you create a new tunnel using `ngrok tcp :8080`
    url: https://8.tcp.ngrok.io:16482
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVFekNDQW51Z0F3SUJBZ0lRZFZaWVdNTUMycnZDc0Z5OTZkT25pVEFOQmdrcWhraUc5dzBCQVFzRkFEQlgKTVI0d0hBWURWUVFLRXhWdGEyTmxjblFnWkdWMlpXeHZjRzFsYm5RZ1EwRXhGakFVQmdOVkJBc01EWE5zYjJ0QQpibUYxZEdsc2RYTXhIVEFiQmdOVkJBTU1GRzFyWTJWeWRDQnpiRzlyUUc1aGRYUnBiSFZ6TUI0WERUSXhNRGd4Ck1qRTBNRGt5TTFvWERUSXpNVEV4TWpFMU1Ea3lNMW93UVRFbk1DVUdBMVVFQ2hNZWJXdGpaWEowSUdSbGRtVnMKYjNCdFpXNTBJR05sY25ScFptbGpZWFJsTVJZd0ZBWURWUVFMREExemJHOXJRRzVoZFhScGJIVnpNSUlCSWpBTgpCZ2txaGtpRzl3M [...]
  admissionReviewVersions: ["v1"]
  sideEffects: NoneOnDryRun
  timeoutSeconds: 3
